# cross_compile_learning

./: CMakeLists.txt  README.md  main.cpp
include/: alg.hpp
platform/: armhf.cmake
src/: CMakeLists.txt  alg.cpp
